<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/bored_light"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/mainTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="148dp"
        android:textColor="@color/bored_dark"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/not_bored_title"
        android:letterSpacing="0.1"
        android:textSize="@dimen/title"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/participantsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="12dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/participants"
        android:textSize="@dimen/body"
        android:textColor="@color/bored_text"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/participantsEditText"
        app:layout_constraintStart_toStartOf="@+id/participantsEditText" />

    <EditText
        android:id="@+id/participantsEditText"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="192dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/roboto_medium"
        android:autofillHints="participants"
        android:background="@drawable/custom_input"
        android:hint="@string/enter_participants_number"
        android:inputType="number"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textColorHint="#757575"
        android:textSize="@dimen/inputs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainTitle"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/startButton"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="104dp"
        android:layout_marginEnd="24dp"
        android:text="@string/start_label"
        android:textAllCaps="false"
        android:fontFamily="@font/roboto_medium"
        android:textSize="@dimen/inputs"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/participantsEditText"
        app:layout_constraintVertical_bias="0.314" />


    <TextView
        android:id="@+id/participantValidationError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/participants_validation_error"
        android:textColor="@color/red"
        android:fontFamily="@font/roboto_medium"
        android:layout_marginTop="2dp"
        android:visibility="invisible"
        android:textSize="@dimen/error"
        app:layout_constraintStart_toStartOf="@+id/participantsEditText"
        app:layout_constraintTop_toBottomOf="@+id/participantsEditText" />

    <CheckBox
        android:id="@+id/termsCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="2dp"
        android:textSize="@dimen/body"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/agree_terms"
        app:layout_constraintStart_toStartOf="@+id/startButton"
        app:layout_constraintTop_toBottomOf="@+id/startButton" />

    <TextView
        android:id="@+id/termsValidationError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/terms_error"
        android:textColor="@color/red"
        android:fontFamily="@font/roboto_medium"
        android:textSize="@dimen/error"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/startButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    
    <com.google.android.material.slider.RangeSlider
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rangeSlider"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:valueFrom="0.0"
        app:values="@array/rangeSliderValue"
        android:valueTo="1.0"
        android:fontFamily="@font/roboto_medium"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/participantsEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:stepSize="0.1"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/seekbar_text"
        android:fontFamily="@font/roboto_medium"
        android:textStyle="bold"
        android:textSize="@dimen/body"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rangeSlider"/>


</androidx.constraintlayout.widget.ConstraintLayout>