<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TermsAndConditionsActivity">

    <ImageView
        android:id="@+id/closeIcon"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="32dp"
        android:clickable="true"
        android:background="?attr/selectableItemBackgroundBorderless"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/close_icon"
        android:contentDescription="@string/close_activity_description"
        android:focusable="true" />

    <TextView
        android:id="@+id/termsActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="52dp"
        android:text="@string/terms_label"
        android:textSize="22sp"
        android:layout_marginStart="44dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/termsActivityAppTitle"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/termsActivityAppTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="184dp"
        android:text="@string/not_bored_title"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="454dp"
        android:layout_margin="32dp"
        android:padding="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/termsActivityAppTitle"
        app:layout_constraintVertical_bias="0.822">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/loremIpsumTerms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/terms_and_conditions" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>